add yaml for namespace and sample certs

--- a/istio-multicluster-gateways/templates/values-istio-multicluster-gateways.yaml
+++ b/istio-multicluster-gateways/templates/values-istio-multicluster-gateways.yaml
@@ -1,6 +1,7 @@
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
+  namespace: istio-system
   addonComponents:
     istiocoredns:
       enabled: true
