--- a/kubia-yamls/namespace.yaml
+++ b/kubia-yamls/namespace.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: srodi-namespace
-  namespace: simone
+  name: simone
   labels:
     istio-injection: enabled
