--- a/istio-destination/templates/istio-destination.yaml
+++ b/istio-destination/templates/istio-destination.yaml
@@ -1,3 +1,11 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: simone
+  labels:
+    istio-injection: enabled
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -92,17 +100,17 @@ spec:
         exact: /test1
     route:
     - destination:
-        host: srodi-service
+        host: srodi-service.simone.svc.cluster.local
         subset: v1
         port:
           number: 80
-      weight: 10
+      weight: 90
     - destination:
-        host: srodi-service
+        host: srodi-service.simone.svc.cluster.local
         subset: v2
         port:
           number: 80
-      weight: 90
+      weight: 10
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
