--- a/istio-destination/templates/istio-destination.yaml
+++ b/istio-destination/templates/istio-destination.yaml
@@ -84,44 +84,44 @@ spec:
       protocol: HTTP
     hosts:
     - "*"
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: srodi
-spec:
-  hosts:
-  - "*"
-  gateways:
-  - srodi-gateway
-  http:
-  - match:
-    - uri:
-        exact: /test1
-    route:
-    - destination:
-        host: srodi-service.simone.svc.cluster.local
-        subset: v1
-        port:
-          number: 80
-      weight: 90
-    - destination:
-        host: srodi-service.simone.svc.cluster.local
-        subset: v2
-        port:
-          number: 80
-      weight: 10
----
-apiVersion: networking.istio.io/v1alpha3
-kind: DestinationRule
-metadata:
-  name: srodi-destination-rule
-spec:
-  host: srodi-service.simone.svc.cluster.local
-  subsets:
-  - name: v1
-    labels:
-      version: v1
-  - name: v2
-    labels:
-      version: v2
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: srodi
+# spec:
+#   hosts:
+#   - "*"
+#   gateways:
+#   - srodi-gateway
+#   http:
+#   - match:
+#     - uri:
+#         exact: /test1
+#     route:
+#     - destination:
+#         host: srodi-service.simone.svc.cluster.local
+#         subset: v1
+#         port:
+#           number: 80
+#       weight: 90
+#     - destination:
+#         host: srodi-service.simone.svc.cluster.local
+#         subset: v2
+#         port:
+#           number: 80
+#       weight: 10
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: DestinationRule
+# metadata:
+#   name: srodi-destination-rule
+# spec:
+#   host: srodi-service.simone.svc.cluster.local
+#   subsets:
+#   - name: v1
+#     labels:
+#       version: v1
+#   - name: v2
+#     labels:
+#       version: v2
