--- a/istio-destination/templates/istio-destination.yaml
+++ b/istio-destination/templates/istio-destination.yaml
@@ -104,24 +104,24 @@ spec:
         subset: v1
         port:
           number: 80
-#       weight: 90
+      weight: 100
 #     - destination:
 #         host: srodi-service.simone.svc.cluster.local
 #         subset: v2
 #         port:
 #           number: 80
 #       weight: 10
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: DestinationRule
-# metadata:
-#   name: srodi-destination-rule
-# spec:
-#   host: srodi-service.simone.svc.cluster.local
-#   subsets:
-#   - name: v1
-#     labels:
-#       version: v1
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: srodi-destination-rule
+spec:
+  host: srodi-service.simone.svc.cluster.local
+  subsets:
+  - name: v1
+    labels:
+      version: v1
 #   - name: v2
 #     labels:
 #       version: v2
